--- a/hw4/DQN.ipynb
+++ b/hw4/DQN.ipynb
@@ -2,19 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Deep Q Networks\n",
     "Previously, we trained policies using policy gradient algorithms, which directly estimated the gradient of the returns for the policy and performed stochastic gradient ascent. In this section, we will now implement deep Q-learning, which does not explicitly optimize a policy, but simply infers the policy from a learned Q function that is trained via dynamic programming.\n",
     "\n",
     "We will assume discrete action spaces for this notebook as to enable us to easily select actions that maximize the Q-function at given states."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# As usual, a bit of setup\n",
     "import os\n",
@@ -44,13 +42,13 @@
     "        shutil.rmtree(path)\n",
     "    else:\n",
     "        print(\"Folder {} does not exist yet. No old results to delete\".format(path))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "dqn_base_args_dict = dict(\n",
     "    env_name = 'LunarLander-v3', #@param \n",
@@ -83,11 +81,12 @@
     "    seed = 2, #@param {type: \"integer\"}\n",
     "    logdir = 'test',\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## DQN updates\n",
     "Recall in Q-learning, we attempt to solve the optimal state-action values (which we refer to as Q-values $Q(s,a)$), by finding solutions to the Bellman equation given by\n",
@@ -106,20 +105,19 @@
     "where $D$ is our replay buffer containing past transitions we've experienced, $L$ is some loss function capturing how far the predicted Q-values are from the target values, and $\\tilde \\theta$ are the target Q function parameters, which are usually a delayed copy of $\\theta$ for stability reasons.\n",
     "\n",
     "We note our previous policy gradient algorithms were _on-policy_ algoritms, which meant they updated the policy using only the data collected from the most recent policy, and discard all the data after using it just once. In contrast, DQN uses _off-policy_ updates by sampling data from all past interactions, allowing for data reuse over time."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Fill out the missing components for the basic Q-learning update in <code>critics/dqn_critic.py</code> (not including the double_q section)."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#### Test DQN updates\n",
     "dqn_args = dict(dqn_base_args_dict)\n",
@@ -173,20 +171,20 @@
     "\n",
     "updated_weight_error = rel_error(weight_change_partial, expected_weight_change)\n",
     "print(\"Weight Update Error\", updated_weight_error, \"should be on the order of 1e-6 or lower\")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Implement the missing components in the get_action method of <code>policies/argmax_policy.py</code> and the step_env method in <code>agents/dqn_agent.py</code> to allow our agent to interact with the environment."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "### Test argmax policy\n",
     "dqn_args = dict(dqn_base_args_dict)\n",
@@ -209,20 +207,20 @@
     "correct_actions = np.array([1, 0, 1, 0, 1])\n",
     "\n",
     "assert np.all(correct_actions == actions)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "We can now test our DQN implementation on the LunarLander environment. These experiments can take a while to run (over 10 minutes per seed) on CPU, so start early."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "dqn_args = dict(dqn_base_args_dict)\n",
     "\n",
@@ -239,22 +237,23 @@
     "    dqn_args['logdir'] = 'logs/dqn/{}/vanilla_dqn/seed{}'.format(env_str, seed)\n",
     "    dqntrainer = DQN_Trainer(dqn_args)\n",
     "    dqntrainer.run_training_loop()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "### Visualize vanilla DQN results on Lunar Lander\n",
     "%load_ext tensorboard\n",
     "%tensorboard --logdir logs/dqn/LunarLander/vanilla_dqn"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Double DQN\n",
     "One potential issue with learning our Q functions with bootstrapping is _maximization bias_, where the learned Q-values tend to overestimate the actual expected future returns. The main idea is that when there is estimation error in the next state's Q-values, even if the values were correct on average, picking the action with the maximum Q-value would tend to select one where the value is overestimated. This overoptimistic value would then also get propagated via the Bellman backups to other states and actions, and can potentially slow down learning.\n",
@@ -262,13 +261,12 @@
     "Double DQN (https://arxiv.org/abs/1509.06461) proposes a simple solution to alleviate this _maximization bias_. Instead of taking the next action that maximizes the target network's Q-value, it selects the action to maximize the _current_ Q function at the next state, and then takes the target network's estimate of that action's value. \n",
     "\n",
     "Implement the double DQN target value in the update method in <code>critics/dqn_critic.py</code>."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#### Test DQN target value with double Q\n",
     "dqn_args = dict(dqn_base_args_dict)\n",
@@ -323,20 +321,20 @@
     "\n",
     "updated_weight_error = rel_error(weight_change_partial, expected_weight_change)\n",
     "print(\"Weight Update Error\", updated_weight_error, \"should be on the order of 1e-6 or lower\")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "We can now also run some experiments on LunarLander with Double DQN. You may be able to see that double DQN performs slightly better and more stably, but as there is very high variance, dont' worry if you do not."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Run with double DQN\n",
     "dqn_args = dict(dqn_base_args_dict)\n",
@@ -354,25 +352,26 @@
     "    dqn_args['logdir'] = 'logs/dqn/{}/double_dqn/seed{}'.format(env_str, seed)\n",
     "    dqntrainer = DQN_Trainer(dqn_args)\n",
     "    dqntrainer.run_training_loop()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "### Visualize all DQN results on Lunar Lander\n",
     "%load_ext tensorboard\n",
     "%tensorboard --logdir logs/dqn/LunarLander/"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit ('hw4': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -384,7 +383,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.5"
+  },
+  "interpreter": {
+   "hash": "e71d9d111dd8bc852f18196ca01d207b62a851d72adbf7f45ab14aa585bef2e8"
   }
  },
  "nbformat": 4,
